align header fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,10 +22,14 @@ header {
     border-bottom: 1.5px solid #cccccc;
 }
 
+.header-section {
+    width: 960px;
+    margin: auto;
+}
+
 h1 {
     padding: 15px 15px 15px 15px;
     margin: auto;
-    margin-left: 15%;
     font-size: 28px;
     color: #ffffff;
     background-color: #4aaaa5;
@@ -38,7 +42,6 @@ h1 {
 .header-links {
     float: right;
     margin-top: 25px;
-    margin-right: 15%;
     text-align: center;
     color: #777777;
 }
